2019-03-30  Gavin Smith  <gavinsmith0123@gmail.com>

	Skip a test.

	* tp/t/converters_tests.t (at_commands_in_refs): Skip plaintext
	output until we can get consistent results on Solaris 10 and 
	Solaris 11.

2019-03-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl: Do not print errors from conversions.

2019-03-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Use 'utf-8' instead of 'utf-8-strict' as name of encoding.

	* tp/Texinfo/Common.pm (%default_parser_state_configuration)
	(open_out, count_out): Use 'utf-8' instead of 'utf-8-strict' as 
	the name of the perl encoding.
	* tp/Texinfo/ParserNonXS.pm (_open_in): Check for 'utf-8' 
	instead of 'utf-8-strict'.  Add a missing closing parenthesis in 
	input filter declaration.
	* tp/Texinfo/XS/parsetexi/parser.c (wipe_global_info):
	Use 'utf-8' instead of 'utf-8-strict'.

	On perl v5.8.4, there was an error 'Cannot find encoding 
	"utf-8-strict"'.  (This version is used on the OpenCSW 
	buildfarm.)

2019-03-27  Patrice Dumas  <pertusus@free.fr>

	Set Top node Up per format and not in Structuring.

	* tp/Texinfo/Common.pm, tp/Texinfo/Convert/Converter.pm: set 
	TOP_NODE_UP in converter defaults.
	* tp/Texinfo/Structuring.pm, tp/Texinfo/Convert/HTML.pm,
	tp/Texinfo/Convert/Info.pm, doc/texinfo.texi: do not set 
	the Top node Up in Structuring but in converters. Only use 
	TOP_NODE_UP and set an Up URL/name in HTML when TOP_NODE_UP_URL 
	is set and do not modify all the links of the TOP_NODE_UP, 
	only the Top node Up links.

2019-03-27  Patrice Dumas  <pertusus@free.fr>

	* tp/init/chm.pm, tp/init/latex2html.pm, tp/init/tex4ht.pm:
	use __() from Texinfo::Common

2019-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix test of XS modules.

	* tp/Texinfo/XS/TestXS.pm: Declare init function as having a 
	single argument, and return a true value.  Otherwise the test 
	for XS modules fails.  Report from Patrice Dumas.

2019-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Small changes.
